--- a/app.css
+++ b/app.css
@@ -4,7 +4,31 @@
     box-sizing: border-box;
 }
 
-html, body, #root {
+html, body{
     width: 100%;
     height: 100%;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+main {
+    width: 50%;
+    height: max-content;
+    border: 2px solid red;
+}
+
+#formSection {
+    display: none;
+}
+
+#noBtn {
+    display: none;
+}
+
+.greeting {
+    display: none;
 }
