--- a/app.css
+++ b/app.css
@@ -3,32 +3,26 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 html, body{
     width: 100%;
     height: 100%;
 }
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-main {
+main{
     width: 50%;
     height: max-content;
-    border: 2px solid red;
+    border: 8px solid blueviolet;
 }
-
-#formSection {
-    display: none;
-}
-
 #noBtn {
     display: none;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
 }
-
-.greeting {
+#HelloSection {
     display: none;
 }
